--- a/salt/mesos/files/haproxy_template.cfg
+++ b/salt/mesos/files/haproxy_template.cfg
@@ -1,3 +1,5 @@
+# https://gist.github.com/GABeech/eb88933bf49cd82ceab0
+
 global
   log /dev/log   local7 info
   chroot /var/lib/haproxy
@@ -49,10 +51,11 @@ frontend http-in
   stats auth admin:admin
   stats uri /haproxy
 
-  # define hosts
+  # define acls
   {{ $services := .Services }}
   {{ range $index, $app := .Apps }} {{ if $app.Env.BAMBOO_DOMAIN }} {{ $service := getService $services $app.Id }} 
-  acl {{ $app.EscapedId }}-aclrule hdr(host) -i {{ $app.Env.BAMBOO_DOMAIN }} {{ end }} {{ end }}
+  acl {{ $app.EscapedId }}-aclrule-domain hdr(host) -i {{ $app.Env.BAMBOO_DOMAIN }} {{ if $app.Env.BAMBOO_PATH }}
+  acl {{ $app.EscapedId }}-aclrule-path  path_beg {{ $app.Env.BAMBOO_PATH }} {{ end }} {{ end }} {{ end }}
 
   capture request header origin len 128
     http-response add-header Access-Control-Allow-Origin %[capture.req.hdr(0)] if { capture.req.hdr(0) -m found }
@@ -64,8 +67,11 @@ frontend http-in
 
   # define routes
   {{ $services := .Services }}
-  {{ range $index, $app := .Apps }} {{ if $app.Env.BAMBOO_DOMAIN }} {{ $service := getService $services $app.Id }} 
-  use_backend {{ $app.EscapedId }}-cluster if {{ $app.EscapedId }}-aclrule {{ end }} {{ end }}
+  {{ range $index, $app := .Apps }} {{ if $app.Env.BAMBOO_DOMAIN }} {{ $service := getService $services $app.Id }} {{ if $app.Env.BAMBOO_PATH }}
+  use_backend {{ $app.EscapedId }}-cluster if {{ $app.EscapedId }}-aclrule-domain {{ $app.EscapedId }}-aclrule-path {{ end }} {{ end }} {{ end }}
+  {{ $services := .Services }}
+  {{ range $index, $app := .Apps }} {{ if $app.Env.BAMBOO_DOMAIN }} {{ $service := getService $services $app.Id }} {{ if not $app.Env.BAMBOO_PATH }}
+  use_backend {{ $app.EscapedId }}-cluster if {{ $app.EscapedId }}-aclrule-domain {{ end }} {{ end }} {{ end }}
 
   # define backends
   {{ range $index, $app := .Apps }} {{ if $app.Env.BAMBOO_DOMAIN }} 
@@ -95,5 +101,7 @@ listen {{ $app.EscapedId }}_{{ $servicePort }}
         server {{ $app.EscapedId }}-{{ $task.Host }}-{{ index $task.Ports $serviceIndex }} {{ $task.Host }}:{{ index $task.Ports $serviceIndex }} {{ if $app.HealthCheckPath }} check inter 30000 {{ end }} {{ end }}
   {{ end }}{{ end }}
 {{ end }}
+
+
 
 
